--- a/src/components/VideoItem.css
+++ b/src/components/VideoItem.css
@@ -7,3 +7,11 @@
 .video-item.item img {
   max-width: 180px;
 }
+
+.grow { 
+  transition: all .2s ease-in-out; 
+  }
+  
+  .grow:hover { 
+  transform: scale(1.1); 
+  }
